[feat](MES-114): BOM revision workflow — parent/child schema, approval engine, legacy cleanup [T037-T065]
Ref: MES-114
Task: T037-T065