@@ -1,12 +1,15 @@
 package com.mes.inventory.unit.bom.service;
 
 import com.mes.inventory.bom.api.dto.BomExplosionNode;
-import com.mes.inventory.bom.domain.BillOfMaterials;
+import com.mes.inventory.bom.domain.Bom;
+import com.mes.inventory.bom.domain.BomRevision;
 import com.mes.inventory.bom.repository.BomLineRepository;
 import com.mes.inventory.bom.repository.BomRepository;
+import com.mes.inventory.bom.repository.BomRevisionRepository;
 import com.mes.inventory.bom.service.BomExplosionService;
 import com.mes.inventory.bom.service.BomNotFoundException;
 import com.mes.inventory.bom.service.BomValidationException;
+import com.mes.inventory.itemmaster.domain.RevisionStatus;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -22,6 +25,8 @@ import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.Mockito.lenient;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -31,23 +36,32 @@ class BomExplosionServiceTest {
     BomRepository bomRepository;
 
     @Mock
+    BomRevisionRepository bomRevisionRepository;
+
+    @Mock
     BomLineRepository bomLineRepository;
 
     private BomExplosionService service;
 
     @BeforeEach
     void setUp() {
-        service = new BomExplosionService(bomRepository, bomLineRepository, 5);
+        service = new BomExplosionService(bomRepository, bomRevisionRepository, bomLineRepository, 5);
     }
 
     // ── Helpers ───────────────────────────────────────────────────────────────
 
-    private static BillOfMaterials bom(UUID orgId, UUID bomId, UUID parentItemId) {
-        BillOfMaterials b = new BillOfMaterials();
-        b.setOrgId(orgId);
-        b.setParentItemId(parentItemId);
-        b.setBomRevision("REV-A");
+    private static Bom bom(UUID bomId, UUID parentItemId) {
+        Bom b = mock(Bom.class);
+        when(b.getId()).thenReturn(bomId);
+        lenient().when(b.getParentItemId()).thenReturn(parentItemId);
         return b;
+    }
+
+    private static BomRevision draftRevision(UUID revisionId) {
+        BomRevision r = mock(BomRevision.class);
+        when(r.getId()).thenReturn(revisionId);
+        when(r.getRevisionStatus()).thenReturn(RevisionStatus.DRAFT);
+        return r;
     }
 
     /**
@@ -57,8 +71,8 @@ class BomExplosionServiceTest {
      */
     private static Object[] row(String componentId, String parentId, int depth, String partNumber) {
         return new Object[]{
-            componentId, parentId, depth, partNumber, "A",
-            "Description", "EA", "NONE", "ACTIVE",
+            componentId, parentId, depth, partNumber, 1,
+            "Description", "EA", "NONE", "DRAFT",
             null, null, null, null, null,
             "F-001", "2.000", "MAKE"
         };
@@ -67,8 +81,8 @@ class BomExplosionServiceTest {
     private static Object[] rowWithDates(String componentId, String parentId,
                                           String fromDate, String toDate) {
         return new Object[]{
-            componentId, parentId, 1, "PN-DATE", "A",
-            "Date part", "EA", "NONE", "ACTIVE",
+            componentId, parentId, 1, "PN-DATE", 1,
+            "Date part", "EA", "NONE", "DRAFT",
             "DATE", fromDate, toDate, null, null,
             "F-DATE", "1.000", "BUY"
         };
@@ -77,8 +91,8 @@ class BomExplosionServiceTest {
     private static Object[] rowWithUnits(String componentId, String parentId,
                                           String fromUnit, String toUnit) {
         return new Object[]{
-            componentId, parentId, 1, "PN-UNIT", "A",
-            "Unit part", "EA", "NONE", "ACTIVE",
+            componentId, parentId, 1, "PN-UNIT", 1,
+            "Unit part", "EA", "NONE", "DRAFT",
             "UNIT", null, null, fromUnit, toUnit,
             "F-UNIT", "1.000", "BUY"
         };
@@ -97,14 +111,14 @@ class BomExplosionServiceTest {
     }
 
     @Test
-    void explode_returnsEmptyList_whenBomHasNoLines() {
+    void explode_returnsEmptyList_whenBomHasNoRevisions() {
         UUID orgId = UUID.randomUUID();
         UUID bomId = UUID.randomUUID();
         UUID parentItemId = UUID.randomUUID();
+        Bom bomEntity = bom(bomId, parentItemId);
 
-        when(bomRepository.findByOrgIdAndId(orgId, bomId))
-                .thenReturn(Optional.of(bom(orgId, bomId, parentItemId)));
-        when(bomLineRepository.findExplosionRows(bomId)).thenReturn(Collections.emptyList());
+        when(bomRepository.findByOrgIdAndId(orgId, bomId)).thenReturn(Optional.of(bomEntity));
+        when(bomRevisionRepository.findAllByBomId(bomId)).thenReturn(Collections.emptyList());
 
         List<BomExplosionNode> result = service.explode(orgId, bomId, "flat", null, null, 0);
         assertThat(result).isEmpty();
@@ -114,12 +128,15 @@ class BomExplosionServiceTest {
     void explode_returnsFlatNodes_forFlatFormat() {
         UUID orgId = UUID.randomUUID();
         UUID bomId = UUID.randomUUID();
+        UUID revId = UUID.randomUUID();
         UUID parentItemId = UUID.randomUUID();
         String compId = UUID.randomUUID().toString();
+        Bom bomEntity = bom(bomId, parentItemId);
+        BomRevision rev = draftRevision(revId);
 
-        when(bomRepository.findByOrgIdAndId(orgId, bomId))
-                .thenReturn(Optional.of(bom(orgId, bomId, parentItemId)));
-        when(bomLineRepository.findExplosionRows(bomId))
+        when(bomRepository.findByOrgIdAndId(orgId, bomId)).thenReturn(Optional.of(bomEntity));
+        when(bomRevisionRepository.findAllByBomId(bomId)).thenReturn(List.of(rev));
+        when(bomLineRepository.findExplosionRows(revId))
                 .thenReturn(Collections.singletonList(
                         row(compId, parentItemId.toString(), 1, "PN-COMP")));
 
@@ -135,25 +152,27 @@ class BomExplosionServiceTest {
     void explode_buildsTree_forIndentedFormat() {
         UUID orgId = UUID.randomUUID();
         UUID bomId = UUID.randomUUID();
+        UUID revId = UUID.randomUUID();
         UUID parentItemId = UUID.randomUUID();
         String compId = UUID.randomUUID().toString();
         String grandchildId = UUID.randomUUID().toString();
+        Bom bomEntity = bom(bomId, parentItemId);
+        BomRevision rev = draftRevision(revId);
 
         Object[] parentRow = new Object[]{
-            compId, parentItemId.toString(), 1, "COMP", "A",
-            "Comp desc", "EA", "NONE", "ACTIVE", null, null, null, null, null,
+            compId, parentItemId.toString(), 1, "COMP", 1,
+            "Comp desc", "EA", "NONE", "DRAFT", null, null, null, null, null,
             "F-001", "1.000", "MAKE"
         };
         Object[] childRow = new Object[]{
-            grandchildId, compId, 2, "SUBCOMP", "A",
-            "Subcomp desc", "EA", "NONE", "ACTIVE", null, null, null, null, null,
+            grandchildId, compId, 2, "SUBCOMP", 1,
+            "Subcomp desc", "EA", "NONE", "DRAFT", null, null, null, null, null,
             "F-002", "2.000", "BUY"
         };
 
-        when(bomRepository.findByOrgIdAndId(orgId, bomId))
-                .thenReturn(Optional.of(bom(orgId, bomId, parentItemId)));
-        when(bomLineRepository.findExplosionRows(bomId))
-                .thenReturn(Arrays.asList(parentRow, childRow));
+        when(bomRepository.findByOrgIdAndId(orgId, bomId)).thenReturn(Optional.of(bomEntity));
+        when(bomRevisionRepository.findAllByBomId(bomId)).thenReturn(List.of(rev));
+        when(bomLineRepository.findExplosionRows(revId)).thenReturn(Arrays.asList(parentRow, childRow));
 
         List<BomExplosionNode> result = service.explode(orgId, bomId, "indented", null, null, 0);
 
@@ -167,11 +186,14 @@ class BomExplosionServiceTest {
     void explode_throwsValidationException_whenDepthExceedsMaxDepth() {
         UUID orgId = UUID.randomUUID();
         UUID bomId = UUID.randomUUID();
+        UUID revId = UUID.randomUUID();
         UUID parentItemId = UUID.randomUUID();
+        Bom bomEntity = bom(bomId, parentItemId);
+        BomRevision rev = draftRevision(revId);
 
-        when(bomRepository.findByOrgIdAndId(orgId, bomId))
-                .thenReturn(Optional.of(bom(orgId, bomId, parentItemId)));
-        when(bomLineRepository.findExplosionRows(bomId))
+        when(bomRepository.findByOrgIdAndId(orgId, bomId)).thenReturn(Optional.of(bomEntity));
+        when(bomRevisionRepository.findAllByBomId(bomId)).thenReturn(List.of(rev));
+        when(bomLineRepository.findExplosionRows(revId))
                 .thenReturn(Collections.singletonList(
                         row(UUID.randomUUID().toString(), parentItemId.toString(), 6, "DEEP")));
 
@@ -184,14 +206,17 @@ class BomExplosionServiceTest {
     void explode_filtersToRequestMaxDepth_whenLowerThanServiceMax() {
         UUID orgId = UUID.randomUUID();
         UUID bomId = UUID.randomUUID();
+        UUID revId = UUID.randomUUID();
         UUID parentItemId = UUID.randomUUID();
+        Bom bomEntity = bom(bomId, parentItemId);
+        BomRevision rev = draftRevision(revId);
 
         Object[] depth1 = row(UUID.randomUUID().toString(), parentItemId.toString(), 1, "D1");
         Object[] depth2 = row(UUID.randomUUID().toString(), UUID.randomUUID().toString(), 2, "D2");
 
-        when(bomRepository.findByOrgIdAndId(orgId, bomId))
-                .thenReturn(Optional.of(bom(orgId, bomId, parentItemId)));
-        when(bomLineRepository.findExplosionRows(bomId)).thenReturn(Arrays.asList(depth1, depth2));
+        when(bomRepository.findByOrgIdAndId(orgId, bomId)).thenReturn(Optional.of(bomEntity));
+        when(bomRevisionRepository.findAllByBomId(bomId)).thenReturn(List.of(rev));
+        when(bomLineRepository.findExplosionRows(revId)).thenReturn(Arrays.asList(depth1, depth2));
 
         List<BomExplosionNode> result = service.explode(orgId, bomId, "flat", null, null, 1);
 
@@ -203,11 +228,14 @@ class BomExplosionServiceTest {
     void explode_filtersByDate_includesEffectiveLine() {
         UUID orgId = UUID.randomUUID();
         UUID bomId = UUID.randomUUID();
+        UUID revId = UUID.randomUUID();
         UUID parentItemId = UUID.randomUUID();
+        Bom bomEntity = bom(bomId, parentItemId);
+        BomRevision rev = draftRevision(revId);
 
-        when(bomRepository.findByOrgIdAndId(orgId, bomId))
-                .thenReturn(Optional.of(bom(orgId, bomId, parentItemId)));
-        when(bomLineRepository.findExplosionRows(bomId))
+        when(bomRepository.findByOrgIdAndId(orgId, bomId)).thenReturn(Optional.of(bomEntity));
+        when(bomRevisionRepository.findAllByBomId(bomId)).thenReturn(List.of(rev));
+        when(bomLineRepository.findExplosionRows(revId))
                 .thenReturn(Collections.singletonList(
                         rowWithDates(UUID.randomUUID().toString(), parentItemId.toString(),
                                 "2025-01-01", "2025-12-31")));
@@ -222,11 +250,14 @@ class BomExplosionServiceTest {
     void explode_filtersByDate_throwsWhenNoEffectiveLineRemains() {
         UUID orgId = UUID.randomUUID();
         UUID bomId = UUID.randomUUID();
+        UUID revId = UUID.randomUUID();
         UUID parentItemId = UUID.randomUUID();
+        Bom bomEntity = bom(bomId, parentItemId);
+        BomRevision rev = draftRevision(revId);
 
-        when(bomRepository.findByOrgIdAndId(orgId, bomId))
-                .thenReturn(Optional.of(bom(orgId, bomId, parentItemId)));
-        when(bomLineRepository.findExplosionRows(bomId))
+        when(bomRepository.findByOrgIdAndId(orgId, bomId)).thenReturn(Optional.of(bomEntity));
+        when(bomRevisionRepository.findAllByBomId(bomId)).thenReturn(List.of(rev));
+        when(bomLineRepository.findExplosionRows(revId))
                 .thenReturn(Collections.singletonList(
                         rowWithDates(UUID.randomUUID().toString(), parentItemId.toString(),
                                 "2024-01-01", "2024-12-31")));
@@ -241,11 +272,14 @@ class BomExplosionServiceTest {
     void explode_filtersByDate_includesOpenEndedLine() {
         UUID orgId = UUID.randomUUID();
         UUID bomId = UUID.randomUUID();
+        UUID revId = UUID.randomUUID();
         UUID parentItemId = UUID.randomUUID();
+        Bom bomEntity = bom(bomId, parentItemId);
+        BomRevision rev = draftRevision(revId);
 
-        when(bomRepository.findByOrgIdAndId(orgId, bomId))
-                .thenReturn(Optional.of(bom(orgId, bomId, parentItemId)));
-        when(bomLineRepository.findExplosionRows(bomId))
+        when(bomRepository.findByOrgIdAndId(orgId, bomId)).thenReturn(Optional.of(bomEntity));
+        when(bomRevisionRepository.findAllByBomId(bomId)).thenReturn(List.of(rev));
+        when(bomLineRepository.findExplosionRows(revId))
                 .thenReturn(Collections.singletonList(
                         rowWithDates(UUID.randomUUID().toString(), parentItemId.toString(),
                                 "2020-01-01", null)));
@@ -260,11 +294,14 @@ class BomExplosionServiceTest {
     void explode_filtersByDate_includesLineWithNullFromDate() {
         UUID orgId = UUID.randomUUID();
         UUID bomId = UUID.randomUUID();
+        UUID revId = UUID.randomUUID();
         UUID parentItemId = UUID.randomUUID();
+        Bom bomEntity = bom(bomId, parentItemId);
+        BomRevision rev = draftRevision(revId);
 
-        when(bomRepository.findByOrgIdAndId(orgId, bomId))
-                .thenReturn(Optional.of(bom(orgId, bomId, parentItemId)));
-        when(bomLineRepository.findExplosionRows(bomId))
+        when(bomRepository.findByOrgIdAndId(orgId, bomId)).thenReturn(Optional.of(bomEntity));
+        when(bomRevisionRepository.findAllByBomId(bomId)).thenReturn(List.of(rev));
+        when(bomLineRepository.findExplosionRows(revId))
                 .thenReturn(Collections.singletonList(
                         rowWithDates(UUID.randomUUID().toString(), parentItemId.toString(),
                                 null, "2025-12-31")));
@@ -279,11 +316,14 @@ class BomExplosionServiceTest {
     void explode_filtersByUnit_includesEffectiveLine() {
         UUID orgId = UUID.randomUUID();
         UUID bomId = UUID.randomUUID();
+        UUID revId = UUID.randomUUID();
         UUID parentItemId = UUID.randomUUID();
+        Bom bomEntity = bom(bomId, parentItemId);
+        BomRevision rev = draftRevision(revId);
 
-        when(bomRepository.findByOrgIdAndId(orgId, bomId))
-                .thenReturn(Optional.of(bom(orgId, bomId, parentItemId)));
-        when(bomLineRepository.findExplosionRows(bomId))
+        when(bomRepository.findByOrgIdAndId(orgId, bomId)).thenReturn(Optional.of(bomEntity));
+        when(bomRevisionRepository.findAllByBomId(bomId)).thenReturn(List.of(rev));
+        when(bomLineRepository.findExplosionRows(revId))
                 .thenReturn(Collections.singletonList(
                         rowWithUnits(UUID.randomUUID().toString(), parentItemId.toString(),
                                 "100", "200")));
@@ -298,11 +338,14 @@ class BomExplosionServiceTest {
     void explode_filtersByUnit_throwsWhenNoEffectiveLineRemains() {
         UUID orgId = UUID.randomUUID();
         UUID bomId = UUID.randomUUID();
+        UUID revId = UUID.randomUUID();
         UUID parentItemId = UUID.randomUUID();
+        Bom bomEntity = bom(bomId, parentItemId);
+        BomRevision rev = draftRevision(revId);
 
-        when(bomRepository.findByOrgIdAndId(orgId, bomId))
-                .thenReturn(Optional.of(bom(orgId, bomId, parentItemId)));
-        when(bomLineRepository.findExplosionRows(bomId))
+        when(bomRepository.findByOrgIdAndId(orgId, bomId)).thenReturn(Optional.of(bomEntity));
+        when(bomRevisionRepository.findAllByBomId(bomId)).thenReturn(List.of(rev));
+        when(bomLineRepository.findExplosionRows(revId))
                 .thenReturn(Collections.singletonList(
                         rowWithUnits(UUID.randomUUID().toString(), parentItemId.toString(),
                                 "100", "200")));
@@ -316,11 +359,14 @@ class BomExplosionServiceTest {
     void explode_filtersByUnit_includesLineWithNullFromUnit() {
         UUID orgId = UUID.randomUUID();
         UUID bomId = UUID.randomUUID();
+        UUID revId = UUID.randomUUID();
         UUID parentItemId = UUID.randomUUID();
+        Bom bomEntity = bom(bomId, parentItemId);
+        BomRevision rev = draftRevision(revId);
 
-        when(bomRepository.findByOrgIdAndId(orgId, bomId))
-                .thenReturn(Optional.of(bom(orgId, bomId, parentItemId)));
-        when(bomLineRepository.findExplosionRows(bomId))
+        when(bomRepository.findByOrgIdAndId(orgId, bomId)).thenReturn(Optional.of(bomEntity));
+        when(bomRevisionRepository.findAllByBomId(bomId)).thenReturn(List.of(rev));
+        when(bomLineRepository.findExplosionRows(revId))
                 .thenReturn(Collections.singletonList(
                         rowWithUnits(UUID.randomUUID().toString(), parentItemId.toString(),
                                 null, "500")));
@@ -335,17 +381,20 @@ class BomExplosionServiceTest {
     void explode_setsCounterfeitRiskAlert_forHighRisk() {
         UUID orgId = UUID.randomUUID();
         UUID bomId = UUID.randomUUID();
+        UUID revId = UUID.randomUUID();
         UUID parentItemId = UUID.randomUUID();
+        Bom bomEntity = bom(bomId, parentItemId);
+        BomRevision rev = draftRevision(revId);
 
         Object[] highRisk = new Object[]{
-            UUID.randomUUID().toString(), parentItemId.toString(), 1, "PN-H", "A",
-            "High risk", "EA", "HIGH", "ACTIVE", null, null, null, null, null,
+            UUID.randomUUID().toString(), parentItemId.toString(), 1, "PN-H", 1,
+            "High risk", "EA", "HIGH", "DRAFT", null, null, null, null, null,
             "F-001", "1.000", "BUY"
         };
 
-        when(bomRepository.findByOrgIdAndId(orgId, bomId))
-                .thenReturn(Optional.of(bom(orgId, bomId, parentItemId)));
-        when(bomLineRepository.findExplosionRows(bomId))
+        when(bomRepository.findByOrgIdAndId(orgId, bomId)).thenReturn(Optional.of(bomEntity));
+        when(bomRevisionRepository.findAllByBomId(bomId)).thenReturn(List.of(rev));
+        when(bomLineRepository.findExplosionRows(revId))
                 .thenReturn(Collections.singletonList(highRisk));
 
         List<BomExplosionNode> result = service.explode(orgId, bomId, "flat", null, null, 0);
@@ -357,17 +406,20 @@ class BomExplosionServiceTest {
     void explode_setsCounterfeitRiskAlert_forCriticalRisk() {
         UUID orgId = UUID.randomUUID();
         UUID bomId = UUID.randomUUID();
+        UUID revId = UUID.randomUUID();
         UUID parentItemId = UUID.randomUUID();
+        Bom bomEntity = bom(bomId, parentItemId);
+        BomRevision rev = draftRevision(revId);
 
         Object[] criticalRisk = new Object[]{
-            UUID.randomUUID().toString(), parentItemId.toString(), 1, "PN-C", "A",
-            "Critical risk", "EA", "CRITICAL", "ACTIVE", null, null, null, null, null,
+            UUID.randomUUID().toString(), parentItemId.toString(), 1, "PN-C", 1,
+            "Critical risk", "EA", "CRITICAL", "DRAFT", null, null, null, null, null,
             "F-001", "1.000", "MAKE"
         };
 
-        when(bomRepository.findByOrgIdAndId(orgId, bomId))
-                .thenReturn(Optional.of(bom(orgId, bomId, parentItemId)));
-        when(bomLineRepository.findExplosionRows(bomId))
+        when(bomRepository.findByOrgIdAndId(orgId, bomId)).thenReturn(Optional.of(bomEntity));
+        when(bomRevisionRepository.findAllByBomId(bomId)).thenReturn(List.of(rev));
+        when(bomLineRepository.findExplosionRows(revId))
                 .thenReturn(Collections.singletonList(criticalRisk));
 
         assertThat(service.explode(orgId, bomId, "flat", null, null, 0)
@@ -375,41 +427,47 @@ class BomExplosionServiceTest {
     }
 
     @Test
-    void explode_setsComponentObsoleted_whenStatusIsObsolete() {
+    void explode_componentObsoletedAlwaysFalse_noObsoleteStatusInNewSchema() {
         UUID orgId = UUID.randomUUID();
         UUID bomId = UUID.randomUUID();
+        UUID revId = UUID.randomUUID();
         UUID parentItemId = UUID.randomUUID();
+        Bom bomEntity = bom(bomId, parentItemId);
+        BomRevision rev = draftRevision(revId);
 
-        Object[] obsolete = new Object[]{
-            UUID.randomUUID().toString(), parentItemId.toString(), 1, "PN-OBS", "A",
-            "Obsolete", "EA", "NONE", "OBSOLETE", null, null, null, null, null,
+        Object[] row = new Object[]{
+            UUID.randomUUID().toString(), parentItemId.toString(), 1, "PN-OBS", 1,
+            "Formerly obsolete", "EA", "NONE", "APPROVED", null, null, null, null, null,
             "F-001", "1.000", "MAKE"
         };
 
-        when(bomRepository.findByOrgIdAndId(orgId, bomId))
-                .thenReturn(Optional.of(bom(orgId, bomId, parentItemId)));
-        when(bomLineRepository.findExplosionRows(bomId))
-                .thenReturn(Collections.singletonList(obsolete));
+        when(bomRepository.findByOrgIdAndId(orgId, bomId)).thenReturn(Optional.of(bomEntity));
+        when(bomRevisionRepository.findAllByBomId(bomId)).thenReturn(List.of(rev));
+        when(bomLineRepository.findExplosionRows(revId))
+                .thenReturn(Collections.singletonList(row));
 
         assertThat(service.explode(orgId, bomId, "flat", null, null, 0)
-                .get(0).isComponentObsoleted()).isTrue();
+                .get(0).isComponentObsoleted()).isFalse();
     }
 
     @Test
     void explode_setsQuantity_fromRowValue() {
         UUID orgId = UUID.randomUUID();
         UUID bomId = UUID.randomUUID();
+        UUID revId = UUID.randomUUID();
         UUID parentItemId = UUID.randomUUID();
+        Bom bomEntity = bom(bomId, parentItemId);
+        BomRevision rev = draftRevision(revId);
 
         Object[] qtyRow = new Object[]{
-            UUID.randomUUID().toString(), parentItemId.toString(), 1, "PN-Q", "A",
-            "Qty part", "EA", "NONE", "ACTIVE", null, null, null, null, null,
+            UUID.randomUUID().toString(), parentItemId.toString(), 1, "PN-Q", 1,
+            "Qty part", "EA", "NONE", "DRAFT", null, null, null, null, null,
             "F-001", "5.500", "MAKE"
         };
 
-        when(bomRepository.findByOrgIdAndId(orgId, bomId))
-                .thenReturn(Optional.of(bom(orgId, bomId, parentItemId)));
-        when(bomLineRepository.findExplosionRows(bomId))
+        when(bomRepository.findByOrgIdAndId(orgId, bomId)).thenReturn(Optional.of(bomEntity));
+        when(bomRevisionRepository.findAllByBomId(bomId)).thenReturn(List.of(rev));
+        when(bomLineRepository.findExplosionRows(revId))
                 .thenReturn(Collections.singletonList(qtyRow));
 
         assertThat(service.explode(orgId, bomId, "flat", null, null, 0)
@@ -420,17 +478,20 @@ class BomExplosionServiceTest {
     void explode_leavesQuantityNull_whenRowHasNullQty() {
         UUID orgId = UUID.randomUUID();
         UUID bomId = UUID.randomUUID();
+        UUID revId = UUID.randomUUID();
         UUID parentItemId = UUID.randomUUID();
+        Bom bomEntity = bom(bomId, parentItemId);
+        BomRevision rev = draftRevision(revId);
 
         Object[] nullQtyRow = new Object[]{
-            UUID.randomUUID().toString(), parentItemId.toString(), 1, "PN-NQ", "A",
-            "No qty", "EA", "NONE", "ACTIVE", null, null, null, null, null,
+            UUID.randomUUID().toString(), parentItemId.toString(), 1, "PN-NQ", 1,
+            "No qty", "EA", "NONE", "DRAFT", null, null, null, null, null,
             "F-001", null, "MAKE"
         };
 
-        when(bomRepository.findByOrgIdAndId(orgId, bomId))
-                .thenReturn(Optional.of(bom(orgId, bomId, parentItemId)));
-        when(bomLineRepository.findExplosionRows(bomId))
+        when(bomRepository.findByOrgIdAndId(orgId, bomId)).thenReturn(Optional.of(bomEntity));
+        when(bomRevisionRepository.findAllByBomId(bomId)).thenReturn(List.of(rev));
+        when(bomLineRepository.findExplosionRows(revId))
                 .thenReturn(Collections.singletonList(nullQtyRow));
 
         assertThat(service.explode(orgId, bomId, "flat", null, null, 0)
